Improve display of LinkURL menu and fix spacing.

--- a/packages/block-editor/src/components/link-control/style.scss
+++ b/packages/block-editor/src/components/link-control/style.scss
@@ -184,13 +184,10 @@ $preview-image-height: 140px;
 		position: relative;
 		top: 0.2em;
 		margin-right: $grid-unit-10;
-		width: 18px; // half of 32px to improve perceived resolution.
-		height: 18px; // half of 32px to improve perceived resolution.
+		flex-shrink: 0;
 
-		svg,
 		img {
-			max-width: none;
-			width: 18px; // half of 32px to improve perceived resolution.
+			max-width: 24px;
 		}
 	}
 
@@ -385,7 +382,7 @@ $preview-image-height: 140px;
 	align-items: center;
 	border-top: $border-width solid $gray-300;
 	margin: 0;
-	padding: $grid-unit-20 $grid-unit-30;
+	padding: $grid-unit-20;
 }
 
 .block-editor-link-control__unlink {
